// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load and render variables for process instance count reports 1`] = `
<li
  className="DistributedBy GroupBy"
>
  <span
    className="label"
  >
    and
  </span>
  <Select
    className="ReportSelect"
    key="3"
    label={false}
    onChange={[Function]}
  >
    <Submenu
      key="variable"
      label="Variable"
    >
      <Option
        key="0"
        value="variable_var1"
      >
        var1
      </Option>
      <Option
        key="1"
        value="variable_var2"
      >
        var2
      </Option>
      <Option
        key="2"
        value="variable_var3"
      >
        var3
      </Option>
    </Submenu>
  </Select>
  <ForwardRef(Button)
    className="removeGrouping"
    onClick={[Function]}
  >
    <Icon
      type="close-small"
    />
  </ForwardRef(Button)>
</li>
`;

exports[`should match snapshot 1`] = `
<li
  className="DistributedBy GroupBy"
>
  <span
    className="label"
  >
    and
  </span>
  <Select
    className="ReportSelect"
    key="0"
    label={false}
    onChange={[Function]}
  >
    <Option
      key="assignee"
      value="assignee"
    >
      Assignee
    </Option>
    <Option
      key="candidateGroup"
      value="candidateGroup"
    >
      Candidate Group
    </Option>
  </Select>
  <ForwardRef(Button)
    className="removeGrouping"
    onClick={[Function]}
  >
    <Icon
      type="close-small"
    />
  </ForwardRef(Button)>
</li>
`;
